# simple-calculator

./: README.md  calculator.py  pyproject.toml  requirements.txt
