[tool.poetry]
name = "simple-calculator"
version = "0.1.0"
description = ""
authors = ["Shannon Reid <shannon.victoria.reid@gmail.com>"]
readme = "README.md"
packages = [{include = "simple_calculator"}]

[tool.poetry.dependencies]
python = "^3.10"
simple-term-menu = "^1.5.0"
rich = "^12.5.1"
pyfiglet = "^0.8.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
